@@ -1,1 +1,1 @@
-agar.gui.widget.graph agar-gui-widget-graph.ads
+agar.gui.widget.graph agar-gui-widget-graph.ads agar-gui-widget-graph.adb
