@@ -30,3 +30,4 @@
 20080910 code: added agar.gui.widget.fixed API functions.
 20080910 code: added helloworld1 demo.
 20080910 code: added agar.gui.widget.fixed_plotter API functions.
+20080913 code: added agar.gui.widget.graph API functions.
